--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/********** Template CSS **********/
 :root {
     --primary: #FF6F0F;
     --secondary: #FFF0E6;
@@ -177,6 +176,13 @@
         object-fit: cover;
     }
 }
+
+@media (max-width: 480px) {
+    #header-carousel .carousel-item {
+        position: relative;
+        min-height: 100vh;
+        text-align: left;
+    }}
 
 .page-header {
     padding-top: 12rem;
